feat : getSensorGroups에 needUpdate 파라미터 추가